Nested grease pencil , becomes uneditable after nested and deleted #60714

Closed
opened 2019-01-21 17:15:13 +01:00 by ward · 5 comments

win 10
intel i5
amd radeon

blender 2.80
Hash :7707bf203c0f

Grease pencil becomes uneditable after creating another nested grease pencil within it

Steps to reproduce

  • Start file new general
  • delete cube
  • shift+A , create grease pencil 'blank '
  • Go into draw mode and draw some stuff
  • Now go into edit mode of the grease pencil object and ad another blank grease pencil object ( shift a )
  • Blender scene collection now clearly shows 2 grease pencil objects
  • Delete the lastly created grease .Pen object ,

Now the original grease pencil object becomes uneidtable , nor drawable

win 10 intel i5 amd radeon blender 2.80 Hash :7707bf203c0f Grease pencil becomes uneditable after creating another nested grease pencil within it Steps to reproduce - Start file new general - delete cube - shift+A , create grease pencil 'blank ' - Go into draw mode and draw some stuff - Now go into edit mode of the grease pencil object and ad another blank grease pencil object ( shift a ) - Blender scene collection now clearly shows 2 grease pencil objects - Delete the lastly created grease .Pen object , Now the original grease pencil object becomes uneidtable , nor drawable
Author

Added subscriber: @gentleclockdivider

Added subscriber: @gentleclockdivider

Added subscriber: @antoniov

Added subscriber: @antoniov
Antonio Vazquez self-assigned this 2019-01-21 18:16:03 +01:00

I think the problem is the add object menu must be disabled in Edit mode, no sense add an object to an existing object. I will handle this.

I think the problem is the add object menu must be disabled in Edit mode, no sense add an object to an existing object. I will handle this.

This issue was referenced by 48149459e4

This issue was referenced by 48149459e46fb45b51680e937962b28045623932

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60714
No description provided.