Fix T60714: Avoid creation of nested objects

In grease pencil is not logic add an object inside other object in edit mode. The object must be created only in Object mode.